--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -434,14 +434,14 @@ nacionaline_artilerijos:0 "Nacionalinės artilerijos dirbtuvės"
 palanga:0 "Palanga Shipyards"
 
 ### Mexico ###
-altos_hornos_mexico:0 "Altos Hornos de México"
-universidad_mexico:0 "Universidad Nacional Autónoma de México"
+altos_hornos_mexico:0 "알토스 호르노스 드 멕시코"
+universidad_mexico:0 "국립 멕시코 자치 대학"
 pemex:0 "PEMEX"
-mendoza:0 "Mendoza"
-ford_mexico:0 "Ford de Mexico"
+mendoza:0 "멘도사"
+ford_mexico:0 "포드 드 멕시코"
 dina:0 "DINA"
 tnca:0 "TNCA"
-talleres_navales_golfo:0 "Talleres Navales del Golfo"
+talleres_navales_golfo:0 "멕시코 만 해군 작업장"
 
 ### Mittelafrika ###
 otavi_minen_eisenbahn:0 "Otavi Minen- und Eisenbahn-Gesellschaft"
