--- a/Kaiserreich Korean Translation/localisation/KR_Leaders_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Leaders_l_english.yml
@@ -75,12 +75,12 @@ POLITICS_JAYACHAMARAJENDRA_WADIYAR_V_DESC:0 "Jayachamarajendra Raja Wadiyar V, P
 
 POLITICS_CORNELIU_ZELEA_CODREANU_DESC:0 "The Conducător, Corneliu Zelea Codreanu, is the undisputed leader of the populist Iron Guard and leader of Romania. A fanatic nationalist, he seeks to unite all lands inhabited by Romanians, from Transylvania to Dobrogea, and throw off the German yoke once and for all."
 
-POLITICS_BORIS_SAVINKOV_DESC:0 "극단적인 민족주의자이자 인민당원인 '나로드노-레스부샤 파르티야 로시이'와 '전투 부대' 로 알려진 과격한 준군사 조직의 지도자보리스 비크토로비치 사빈코프는 원래 사회주의 혁명 정당의 주도적인 당원이었으며, 그 당의 우익 세력을 NRPR로 유인했습니다. 노련한 작가이자 선동 정치가인 사빈코프는 좌파의 약함에 대한 강한 증오심을 품고 있고 러시아를 그것의 영웅적인 반응으로 복원하려는 거창한 꿈을 가지고 있습니다."
+POLITICS_BORIS_SAVINKOV_DESC:0 "극단적인 민족주의자이자 인민당원인 '나로드노-레스부샤 파르티야 로시이'와 '전투 부대'로 알려진 과격한 준군사 조직의 지도자 보리스 비크토로비치 사빈코프는 원래 사회주의 혁명 정당의 주도적인 당원이었으며, 그 당의 우익 세력을 러시아 인민 공화당으로 유인했습니다. 노련한 작가이자 선동 정치가인 사빈코프는 좌파의 약함에 대한 강한 증오심을 품고 있고 러시아를 그것의 영웅적인 반응으로 복원하려는 거창한 꿈을 가지고 있습니다."
 POLITICS_DMITRI_ROMANOV_DESC:0 "러시아의 마지막 차르 니콜라이 2세의 사촌이자 러시아 귀족들 사이에서 가장 영향력 있는 인물인 드미트리 파블로비치는 러시아 정계를 매우 쉽게 주무릅니다. 폭넓은 인맥과 그의 지인들이 국제 관계에서 그를 기꺼이 돕습니다. 그러나 그의 국내 정책에서의 능력 부족은 그의 매력과 인격에 의해서 겨우 가려지고 있는 상황입니다."
 POLITICS_DMITRI_ROMANOV_TSAR_DESC:0 "러시아와 외국 귀족들 간의 수많은 관계는 드미트리 차르가 타국의 외교관들 및 정부와 확고한 외교 관계를 맺는데 도움을 주고, 언론에 대한 그의 뛰어난 이해도 역시 긍정적인 대중적 이미지를 형성하는데 있어서 유리함을 줍니다. 그러나 그의 국내 정책에서의 능력 부족은 그의 매력과 인격에 의해서 겨우 가려지고 있는 상황입니다."
 POLITICS_PAVEL_II_DESC:0 "아버지의 사망 당시에 겨우 12살이었던 어린 파벨 2세는 섭정 의회의 꼭두각시가 될 가능성이 매우 높습니다. 그럼에도 불구하고, 그가 최소한 그의 아버지의 매력 중 일부를 유전받았다는 사실은 분명한데, 그렇기에 만약 충분한 정치적 능력만 갖춘다면, 언젠가 그에게 독립적인 통치의 기회가 주어질지도 모릅니다."
 POLITICS_KYRIL_ROMANOV_CON_DESC:0 "러시아의 모든 정치 세력의 합의에 의해 복위된, 차르 키릴 로마노프는 갱신된 헌법에 의해 제한된 그의 권력의 많은 한계를 받아들여야만 했습니다. 그는 새로운 상황에 빠르게 적응했지만, 그의 오래된 정치적 견해와 내계 관계에 대한 가치관은 필연적으로 그와 정부 사이의 긴장을 유발할 가능성이 높습니다."
-POLITICS_KYRIL_ROMANOV_ABS_DESC:0 "20년간의 공화정 이후에 전제 군주정이 복원된 지금, 키릴 황제는 강력하고 권위적인 군주의 전통적인 이미지를 가진, 로마노프 황가의 마지막 후계자입니다. 러시아 국민들은 수년 간의 무정부 상태가 마침내 끝나기를 희망하고 있지만, 국제 정계는 복위된, 어쩌면 공격적인 차르를 경계하면서, 의심의 눈으로 현재 상황을 주시하고 있습니다."
+POLITICS_KYRIL_ROMANOV_ABS_DESC:0 "20년간의 공화정 이후에 전제군주정이 복원된 지금, 키릴 황제는 강력하고 권위적인 군주의 전통적인 이미지를 가진, 로마노프 황가의 마지막 후계자입니다. 러시아 국민들은 수년 간의 무정부 상태가 마침내 끝나기를 희망하고 있지만, 국제 정계는 복위된, 어쩌면 공격적인 차르를 경계하면서, 의심의 눈으로 현재 상황을 주시하고 있습니다."
 POLITICS_VLADIMIR_ROMANOV_CON_DESC:0 "혁명 이후의 로마노프 일원인 블라디미르는 그의 아버지보다 더 헌법주의에 대해 완전히 새로운 견해를 가지고 있습니다. 재치있고 온화한 사람인 그는 러시아가 또 다른 혁명에서 살아남지 못할수도 있다는 것을 이해하고 러시아의 안녕을 목표로 하는 모든 세력과 기꺼이 협력할 것입니다."
 POLITICS_VLADIMIR_ROMANOV_ABS_DESC:0 "혁명 이후의 로마노프 일원인 블라디미르는 그의 아버지보다 더 독재 정권에 대해 완전히 새로운 견해를 가지고 있습니다. 재치있고 온화한 사람인 그는 러시아가 또 다른 혁명에서 살아남지 못할수도 있다는 것을 이해하고 러시아의 안녕을 목표로 하는 모든 세력과 기꺼이 협력할 것입니다."
 POLITICS_PYOTR_WRANGEL_TSAR_DESC:0 "러시아의 독재 정권에 대한 브랑겔의 전망은 간단합니다. 강력한 규칙만이 제국을 안팎으로 적으로부터 지킬 수 있습니다. 적에게 무자비한 브랑겔은 반동주의자들에게는 사랑받지만 자유주의자들과 사회주의자들에게 미움받고 있습니다. 국제 관계에서 어떤 사람들은 어려운 시기에 그를 강인한 사람으로 인식하지만 다른 사람들은 언젠가 그가 유럽의 새로운 침략자가 될지도 모른다고 두려워합니다."
