--- a/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Austria_l_english.yml
@@ -568,7 +568,7 @@ AUS_totalist_party:0 "전체주의 인민 회의"
 AUS_totalist_party_long:0 "전체주의 인민 회의"
 AUS_syndicalist_party:0 "사회주의 노동자 평의회"
 AUS_syndicalist_party_long:0 "사회주의 노동자 평의회"
-AUS_radical_socialist_party:0 "2½ 인터내서널"
+AUS_radical_socialist_party:0 "2½ 인터내셔널"
 AUS_radical_socialist_party_long:0 "사회주의 노동동맹"
 AUS_social_democrat_party:0 "사회민주노동자당"
 AUS_social_democrat_party_long:0 "사회민주노동자당"
