--- a/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
@@ -891,10 +891,10 @@ austral.241.a:0 "만세! 만세! 만세!"
 austral.242.t:0 "징병 투표: 결과 - 반대"
 austral.242.d:0 "정부는 투표에서 완벽하게 패배했습니다. 징병은 오스트랄라시아의 시민들에게서 완벽하게 거부되었으며 내각의 위신은 심각하게 손상되었습니다."
 austral.242.a:0 "으악! 이런 창피가 있을수가!"
-austral.243.t:0 "Conscription Riots in New Zealand"
-austral.243.d.forced:0 "Nowhere has the issue of conscription been more sensitive than in New Zealand, a territory that already felt it was joined to [Root.GetNameDev] unwillingly by the Consolidation Of Resources Act in 1924. Now that conscription has been forced on the nation by the [Root.GetAdjective] government, riots have broken out across the state - with many rioters angrily burning [Root.GetAdjective] flags and vowing that New Zealand should not be part of the confederation at all."
-austral.243.d.voted:0 "As the votes were being counted it soon became clear that the Yay-side would carry the day. However, complications have arisen since New Zealand overwhelmingly voted no to confederate conscription while mainland Australians mainly voted yes. As a territory which already feels it was forced into confederation by the Consolidation Of Resources Act in 1924, feelings are running raw and several riots have broken out in Auckland and elsewhere, demanding a referendum be held in the state to determine its future as part of Australasia."
-austral.243.a:0 "We are ALL [Root.GetAdjective] citizens!"
+austral.243.t:0 "뉴질랜드 징병거부 폭동"
+austral.243.d.forced:0 "1924년 자원 보존법으로 마지못해 [Root.GetNameDev]에 가입한 영토인 뉴질랜드보다 현재 징병 문제에 민감한 곳은 없습니다. 이제 [Root.GetAdjective] 정부가 징병을 강요하여 주 전역에서 폭동이 일어난 가운데 많은 폭도들이 [Root.GetAdjective] 국기를 불태우고 있으며 뉴질랜드가 연방의 일부가 되어서는 안된다고 소리치고 있습니다."
+austral.243.d.voted:0 "투표가 집계됨에 따라 찬성측이 승리할 것이라는 것이 곧 분명해졌습니다. 그러나 뉴질랜드가 압도적으로 징병 반대표를 던진 반면 호주 본토 사람들은 찬성표를 던진 이후 문제가 생겼습니다. 스스로를 1924년 자원 보존법으로 강압적으로 [Root.GetNameDev]에 가입했다고 생각하는 뉴질랜드에서는 여론이 격해지고 있으며 오클랜드와 그 외 지역에서는 몇차례 폭동이 일어났습니다. 폭도들은 오스트랄리시아의 일부로서 미래를 정하기 위한 국민투표를 실시할 것을 요구하고 있습니다."
+austral.243.a:0 "우린 '모두' [Root.GetAdjective]의 국민이다!"
 austral.245.t:0 "The Australasian Guard Backs Us On Conscription"
 austral.245.d:0 "Charles Vyner Brooke, one of the leading figures in the Australasian Guard and its political front, the Centre Party, has today endorsed the governments successful adoption of conscription. While we may not feel comfortable being complemented by the far right, it is better that than the alternative, as Brooke's support of the Centre Party has seen it grow in strength since the last election."
 austral.245.a:0 "Um, thanks?"
