--- a/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
@@ -850,7 +850,7 @@ austral.214.b:0 "우리의 병사들을 훈련하는데 집중한다"
 austral.214.c:0 "질 좋은 무기 외에 다른 것은 필요없다"
 austral.215.t:0 "징병 투표를 시작하다"
 austral.215.d:0 "정부는 몇 주 동안 투표를 준비해왔고 이미 그 문제는 [Root.GetNameDef]전역을 휩쓸고 지나갔습니다. 이는 논란이 많은 주제이고 각 주별로 집계될 것입니다. 만일 이를 승인한 주가 그렇지 않은 주보다 더 많다면 징병법은 곧바로 통과될 것입니다. 하지만 만약 투표가 실패한다면 이는 정부는 난처해질 것이고 미래에 징병은 더욱 힘들어질 것입니다. 완전한 결과는 한 달내지는 그 이내로 나올 것입니다."
-austral.215.a:0 이제 우리가 할 수 있는 일은 기다리는 것 뿐이다..."
+austral.215.a:0 "이제 우리가 할 수 있는 일은 기다리는 것 뿐이다..."
 austral.217.t:0 "뉴사우스웨일즈는 찬성에 투표했다"
 austral.217.d:0 "징병 투표의 득표수가 뉴사우스웨일즈 주에서 들어왔고 그 결과는 사람들이 찬성에 투표한 것으로 집계되었습니다."
 austral.217.a:0 "만세!"
