--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -131,8 +131,8 @@ ENG_new_capital:0 "노동조합총회 이전"
 ENG_new_capital_desc:0 "런던은 중앙집권주의에 젖어 있으며 그것은 또한 노동조합총회의 이미지입니다. 모든 연방의 외곽에서부터 접근하기 쉬운 더 작은 도시로의 이전만이 전 영국을 위한 연방을 보장할 것입니다. 그 도시는 버밍엄이 될 것입니다."
 ENG_home_rule:0 "지방의 통제"
 ENG_home_rule_desc:0 "생디칼리즘은 지방에서 달성되어야 합니다. 아무도 좋아하지 않는 세금 수취청 같은 몇몇 사무소는 지방 국가의 수도인 카디프와 에딘버러로 이전될 수 있습니다. 이들은 지역 노동조합총회의 설립을 준비할 수 있습니다."
-ENG_dissolve_TUC:0 "노동조합총회 해체"
-ENG_dissolve_TUC_desc:0 "노동 조합 회의는 그의 역할을 다했습니다. 이제부터, 그것은 생디칼리스트적 이상향에서 중앙집권적 압제로의 상징으로 변화하였습니다. 인민궁전을 새로운 영국의 노동조합총회로 만들 때가 왔습니다. 연방의 남은 지역은 곧 다뤄질 것입니다.."
+ENG_dissolve_tuc:0 "노동조합총회 해체"
+ENG_dissolve_tuc_desc:0 "노동 조합 회의는 그의 역할을 다했습니다. 이제부터, 그것은 생디칼리스트적 이상향에서 중앙집권적 압제로의 상징으로 변화하였습니다. 인민궁전을 새로운 영국의 노동조합총회로 만들 때가 왔습니다. 연방의 남은 지역은 곧 다뤄질 것입니다.."
 ENG_devolution:0 "이행"
 ENG_devolution_desc:0 "카디프와 에딘버러에서의 노동조합총회의 설립과 함께, 이행은 성공적인 결말을 맞이하였습니다."
 ENG_turn_the_other_cheek:0 "최대주의자와의 타협"
@@ -245,8 +245,8 @@ ENG_air1:0 "공중 통제"
 ENG_air1_desc:0 "수천년 동안, 영국은 모든 침략자들로부터 바다에 기대며 안전할 수 있었습니다. 최초로 이제 우리는 하늘을 통한 침략이라는 실존하는 위협에 대응해야 합니다. 하지만 우리는 검증된 교리를 활용할 수 있습니다. 간단하게 최대한 많이 뽑아내는 것입니다. 더 많은 전투기들! 더 많은 폭격기들!"
 ENG_air21:0 "전장 통제"
 ENG_air21_desc:0 "하늘에서의 전투가 중요하기는 하지만, 우리는 여전히 전쟁에서 이기기 위해 땅에 발을 붙여 놓아야 합니다. 우리의 산업 능력을 상황에 부응하도록 구성해야 합니다."
-ENG_air22:0 "레이더"
-ENG_air22_desc:0 "R.A.D.A.R. 라고 불리우는 새로운 기술은 우리 적들에 대한 괴로움을 겪는 것을 피하는 데 도움을 줄 것입니다."
+ENG_radar:0 "레이더"
+ENG_radar_desc:0 "레이더라고 불리우는 새로운 기술은 우리 적들에 대한 괴로움을 겪는 것을 피하는 데 도움을 줄 것입니다."
 ENG_tuc2:0 "또다른 영국 총회 개최"
 ENG_tuc2_desc:0 "지난 몇 년 동안 세상은 변화하였고, 이제 우리의 지도자를 다시 볼 완벽할 기회입니다. 의장은 자신의 자리를 포함한 모든 중요 직책에서의 선거를 개최하였습니다."
 ENG_show_of_force_dip:0 "대화"
