--- a/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
@@ -227,7 +227,7 @@ NFA_support_kos:0 "스페인 왕국 지원"
 NFA_support_kos_desc:0 "The Kingdom of Spain is thrown into Civil War. It is our duty to send them volunteers and help them win against the reactionary Carlists and the reds from the CNT!"
 NFA_influence_kos:0 "스페인 왕국에 영향력 행사"
 NFA_influence_kos_desc:0 "Madrid has won the Civil War, in many parts thanks to us. It is the occasion to draw them closer to the Entente and maybe use them as a leverage to regain France!"
-NFA_support_carlists:0 "카를시스트 지원"
+NFA_support_carlists:0 "카를리스트 지원"
 NFA_support_carlists_desc:0 "Spain is thrown into Civil War. Instead of supporting the decadent Kingdom of Spain we could support the true pretenders to the throne, our Catholic brothers, the Carlists."
 bypass_alliance_carlist:0 "This focus will be bypassed if you join Carlist Spain in its faction"
 NFA_alliance_catholic:0 "지중해 연합 가입"
@@ -275,17 +275,17 @@ NFA_amnistia_desc:0 "We have to admit that the Communards sponsored innovation i
 
 ### Events ###
 nfa.1.t:0 "1936년 국민 프랑스의 상황"
-nfa.1.d:0 "제3공화국은 시작된 방식과 똑같은 방식으로 종식되었습니다; 독일군에게 패배했고, 고향에서 코뮌 혁명을 맞이했습니다. 프랑스 코뮌 혁명의 여파 속에서, 마르세유로 대피한 국가의 모든 기관과 프랑스군은 새로 설립된 프랑스 코뮌으로 부터 도망치면서 프랑스 해군과 함께 신속히 알제로 떠났습니다. 독일과의 평화 협상 후에, 프랑스 피난 정치인들은 또다시 처음부터 시작하기로 결정했습니다, 프랑스 제4공화국을 선언하고, 망명 중인 아프리카에서 프랑스 고토의 권리를 주장했습니다. 곧 이어, 의회제도가 뒤떨어진 것이 분명해졌습니다, 망명한 주요 정치인들이 주로 민족주의자들과 권위주의자들이기 때문이었습니다. 이후, 인기있는 페르디낭 포슈 원수의 지휘 하에, 군대가 집행권을 장악했습니다. 포슈가 1929년에 사망한 이후, 베르됭의 승자인 필리프 페탱이 제자인 프랑수아 다를랑 제독의 도움을 받아 포슈의 자리를 이었습니다. 망명 영국 군주정과 동맹을 유지하고 있는, 망명 프랑스 공화국의 군정은 통합되었고 안정되었지만, 여전히 수많은 위협들을 마주하고 있습니다. 프랑스의 지배에 지친 원주민들이나 샤를 드골 대령으로 대표되는 청년 근위대와의 문제가 증가하고 있음에도 불구하고 국민 프랑스는 조국을 되찾을 수 있을까요?"
+nfa.1.d:0 "제3공화국은 시작된 방식과 똑같은 방식으로 종식되었습니다; 독일군에게 패배했고, 고향에서 코뮌 혁명을 맞이했습니다. 프랑스 코뮌 혁명의 여파 속에서, 마르세유로 대피한 국가의 모든 기관과 프랑스군은 새로 설립된 프랑스 코뮌으로 부터 도망치면서 프랑스 해군과 함께 신속히 알제로 떠났습니다. 독일과의 평화 협상 후에, 프랑스 피난 정치인들은 또다시 처음부터 시작하기로 결정했습니다, 프랑스 제4공화국을 선언하고, 망명 중인 아프리카에서 프랑스 고토의 권리를 주장했습니다. 곧 이어, 의회 제도가 뒤떨어진 것이 분명해졌습니다, 망명한 주요 정치인들이 주로 민족주의자들과 권위주의자들이기 때문이었습니다. 이후, 인기있는 페르디낭 포슈 원수의 지휘 하에, 군대가 집행권을 장악했습니다. 포슈가 1929년에 사망한 이후, 베르덩의 승자인 필리프 페탱이 제자인 프랑수아 다를랑 제독의 도움을 받아 포슈의 자리를 이었습니다. 망명 영국 군주정과 동맹을 유지하고 있는, 망명 프랑스 공화국의 군정은 통합되었고 안정되었지만, 여전히 수많은 위협들을 마주하고 있습니다. 프랑스의 지배에 지친 원주민들이나 샤를 드골 대령으로 대표되는 청년 근위대와의 문제가 증가하고 있음에도 불구하고 국민 프랑스는 조국을 되찾을 수 있을까요?"
 nfa.1.a:0 "이것은 사소한 일일 뿐이다..."
 nfa.2.t:0 "공화정 복원"
 nfa.2.d:0 "Today President Pétain announced from the balcony of the presidential palace in Algiers the restoration of the suspended constitution of the 4th Republic, the declaration was followed by a popular jubilation in the European districts of Algiers, Oran or Tunis. Vive la République!"
 nfa.2.a:0 "공화국 만세!"
 nfa.3.t:0 "부르봉 왕가 복원"
 nfa.3.d:0 "Today Jean d'Orléans has been crowned king of France during an ornate ceremony in the Notre Dame d'Afrique. During the ceremony President of Republic handed the crown to the cardinal that crowned the him, symbolising the transfer of power from the President to the new king. Vive le Roi!"
-nfa.3.a:0 "Vive le Roi!"
+nfa.3.a:0 "국왕 폐하 만세!"
 nfa.4.t:0 "황실 복원"
 nfa.4.d:0 "Today Louis Napoléon IV has been crowned Emperor of France during an ornate ceremony in the Notre Dame d'Afrique. During the ceremony President of Republic handed the crown to the cardinal that crowned him, symbolising the transfer of power from the President to the new Emperor. Vive l'empereur!"
-nfa.4.a:0 "황실 만세!"
+nfa.4.a:0 "황제 폐하 만세!"
 nfa.5.t:0 "총리 내정"
 nfa.5.d:0 "With general Janin being compromised by his previous political blunders, time has come to choose new prime minister in order to appease dissenters..."
 nfa.5.a:0 "다를랑 제독을 임명한다"
