--- a/Kaiserreich Korean Translation/localisation/KR_South_Africa_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_South_Africa_l_english.yml
@@ -2,14 +2,14 @@ l_english:
 
 ### Parties ###
 SAF_totalist_party:0 "전체주의당"
-SAF_radical_socialist_party:0 "ISL"
+SAF_radical_socialist_party:0 "국제 사회주의 연맹"
 SAF_syndicalist_party:0 "공산당"
 SAF_social_democrat_party:0 "노동당"
 SAF_social_liberal_party:0 "자유당"
 SAF_market_liberal_party:0 "진보당"
 SAF_social_conservative_party:0 "자치당"
 SAF_authoritarian_democrat_party:0 "국민당"
-SAF_paternal_autocrat_party:0 "Gesuiwerde"
+SAF_paternal_autocrat_party:0 "순수당"
 SAF_national_populist_party:0 "아프리카너 연대"
 SAF_totalist_party_long:0 "남아프리카 전체주의당"
 SAF_radical_socialist_party_long:0 "국제 사회주의 연맹"
@@ -19,10 +19,10 @@ SAF_social_liberal_party_long:0 "남아프리카 자유당"
 SAF_market_liberal_party_long:0 "진보당"
 SAF_social_conservative_party_long:0 "자치당"
 SAF_authoritarian_democrat_party_long:0 "국민당"
-SAF_paternal_autocrat_party_long:0 "Afrikaans Gesuiwerde Nasionale Party"
+SAF_paternal_autocrat_party_long:0 "아프리칸스어 순수 국민당"
 SAF_national_populist_party_long:0 "아프리카인 연대"
 SAF_paternal_autocrat_party_PNP:0 "순수 국민당"
-SAF_paternal_autocrat_party_long_PNP:0 "Gesuiwerde Purified National Party"
+SAF_paternal_autocrat_party_long_PNP:0 "순수 국민당"
 SAF_social_conservative_party_Con:0 "보수당"
 SAF_social_conservative_party_long_Con:0 "남아프리카 보수당"
 
