--- a/Kaiserreich Korean Translation/localisation/KR_Colombia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Colombia_l_english.yml
@@ -320,7 +320,7 @@ COL_radical_socialist_party:0 "국가혁명좌익연합"
 COL_radical_socialist_party_long:0 "국가혁명좌익연합"
 COL_syndicalist_party:0 "콜롬비아 생디칼리즘당"
 COL_syndicalist_party_long:0 "콜롬비아 생디칼리즘당"
-COL_totalist_party:0 ""콜롬비아 전체주의 연합"
+COL_totalist_party:0 "콜롬비아 전체주의 연합"
 COL_totalist_party_long:0 "콜롬비아 전체주의 연합"
 
 ### Events ###
