--- a/Kaiserreich Korean Translation/localisation/KR_Tannu_Tuva_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Tannu_Tuva_l_english.yml
@@ -50,8 +50,8 @@ TAN_social_liberal_party:0 "후랄"
 TAN_market_liberal_party:0 "후랄"
 TAN_social_conservative_party:0 "후랄"
 TAN_authoritarian_democrat_party:0 "부족 협의회"
-TAN_paternal_autocrat_party:0 "KG"
-TAN_national_populist_party:0 "TNP"
+TAN_paternal_autocrat_party:0 "Kuular 정부"
+TAN_national_populist_party:0 "투바 국민당"
 TAN_totalist_party_long:0 "후랄"
 TAN_radical_socialist_party_long:0 "후랄"
 TAN_syndicalist_party_long:0 "후랄"
