--- a/Kaiserreich Korean Translation/localisation/KR_Norway_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Norway_l_english.yml
@@ -341,33 +341,33 @@ NOR_NAT_alliance:0 "Strengthen Foreign Ties"
 NOR_NAT_alliance_desc:0 "There are many nations with a world view similar to our in the world. Let us reach out and attempt to establish good relations with potential allies."
 
 ### Parties ###
-NOR_totalist_party:0 "NKP"
-NOR_totalist_party_long:0 "Norges Kommunistiske Parti"
+NOR_totalist_party:0 "노르웨이 공산당"
+NOR_totalist_party_long:0 "노르웨이 공산당"
 NOR_Alt_tot_party:0 "NNP"
 NOR_Alt_tot_party_long:0 "Norges Nasjonalsyndikalistiske Parti"
-NOR_syndicalist_party:0 "NSF"
-NOR_syndicalist_party_long:0 "Norsk Syndikalistisk Forbund"
-NOR_radical_socialist_party:0 "Arbeiderpartiet"
-NOR_radical_socialist_party_long:0 "Arbeiderpartiet"
-NOR_social_democrat_party:0 "NSA"
-NOR_social_democrat_party_long:0 "Norges Socialdemokratiske Arbeiderparti"
-NOR_social_liberal_party:0 "Venstre"
-NOR_social_liberal_party_long:0 "Venstre"
-NOR_market_liberal_party:0 "Høyre"
-NOR_market_liberal_party_long:0 "Høyre"
-NOR_social_conservative_party:0 "Bondepartiet"
-NOR_social_conservative_party_long:0 "Bondepartiet"
-NOR_authoritarian_democrat_party:0 "Fedrelandslaget"
-NOR_authoritarian_democrat_party_long:0 "Fedrelandslaget"
-NOR_paternal_autocrat_party:0 "Nasjonal Samling"
-NOR_paternal_autocrat_party_long:0 "Nasjonal Samling"
-NOR_national_populist_party:0 "DNL"
-NOR_national_populist_party_long:0 "Den Nationale Legion"
+NOR_syndicalist_party:0 "노르웨이 생디칼리스트 연합"
+NOR_syndicalist_party_long:0 "노르웨이 생디칼리스트 연합"
+NOR_radical_socialist_party:0 "노동당"
+NOR_radical_socialist_party_long:0 "노동당"
+NOR_social_democrat_party:0 "노르웨이 사회민주노동당"
+NOR_social_democrat_party_long:0 "노르웨이 사회민주노동당"
+NOR_social_liberal_party:0 "좌파당"
+NOR_social_liberal_party_long:0 "좌파당"
+NOR_market_liberal_party:0 "우파당"
+NOR_market_liberal_party_long:0 "우파당"
+NOR_social_conservative_party:0 "농민당"
+NOR_social_conservative_party_long:0 "농민당"
+NOR_authoritarian_democrat_party:0 "조국 연맹"
+NOR_authoritarian_democrat_party_long:0 "조국 연맹"
+NOR_paternal_autocrat_party:0 "국가 연합"
+NOR_paternal_autocrat_party_long:0 "국가 연합"
+NOR_national_populist_party:0 "국가 군단"
+NOR_national_populist_party_long:0 "국가 군단"
 
 ### Events ###
-norway.1.t:0 "The State of Norway"
-norway.1.d:0 "Norway is standing at a crossroad in history. While the nation is relatively prosperous, civil society is plagued by political infighting and stagnation. The left is divided as a result of schisms within in the once dominant Labour party. In 1921 the moderate faction broke away and formed the Social Democratic Labour Party, while the radical syndicalist wing broke away to form the Norwegian Syndicalist Federation in 1923. In addition, the Norwegian Communist Party is struggling and there are rumours about forming a new vanguard party of the far left, based upon the principles of National-Syndicalism. On the opposite end of the political spectrum, several nationalist organisations are jockeying for power and influence. While they are somewhat united in their opposition to socialism, their means and goals differ. While the political infighting has not resulted in violence, the ruling Liberal party is mostly powerless to handle pressing issues due to its minority government. As dark clouds are gathering once more over Europe, the people are anxiously awaiting the election in October 1936."
-norway.1.a:0 "Enig og tro til Dovre faller"
+norway.1.t:0 "노르웨이의 상태"
+norway.1.d:0 "노르웨이의 역사는 갈림길에 서있습니다. 국가는 상대적으로 번영하고 있지만 시민 사회는 정치적 내분과 침체로 황폐화 되어있습니다. 좌파는 한때 여당이었던 노동당(Labour Party)의 대분할 결과 분열되었습니다. 1921년 온건파는 탈당해서 사회민주노동당(Social Democratic Labour Party)을 창당했고 1923년 급진적 생디칼리스트들은 노르웨이 생디칼리스트 연합(Norwegian Syndicalist Federation)을 형성하기위해 탈당했습니다. 이에 더해 노르웨이 공산당(Norwegian Communist Party)이 투쟁하고 있고 국가생디칼리즘을 바탕으로 하는 극좌파의 새로운 전위적 정당 창당의 소문이 돌고있습니다. 정치적 스펙트럼의 반대쪽 끝에서는 몇개의 국수주의자 조직이 권력과 영향력을 놓고 다투고 있습니다. 사회주의에 대한 반대로 얼마간 연합해있지만 그들의 수단과 목표는 다릅니다. 정치적 내분이 폭력으로 번지지는 않았지만 여당인 자유당(Liberal Party)은 소수파 정권인 탓에 당면한 문제의 해결에는 매우 무력합니다. 유럽에 다시 한번 먹구름이 깔리면서 사람들은 1936년 10월의 선거를 걱정스럽게 기다리고 있습니다."
+norway.1.a:0 "도브레 산이 무너질 때까지 단결과 충성을(Enig og tro til Dovre faller)"
 
 norway.2.t:0 "Trade Mission to Japan"
 norway.2.d:0 "The lack of international trade has crippled the Norwegian economy since 1925. One of the underlying issues is the lack of work for our large merchant navy. A bright individual in the foreign department has recently proposed reaching out to the Empire of Japan, as it could prove a market for our dried-fish and whaling trade. We could also lease some merchant ships to the Japanese at favourable rates. If successful, an agreement would provide much needed contracts for our merchant navy."
