--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -196,7 +196,7 @@ BUL_political_focus_unlock_tooltip:0 "§GEither the Balkan War must have been lo
 
 ### Events ###
 bulgaria.1.t:0 "[Root.GetName] 차르국"
-bulgaria.1.d:0 "세계 대전이 끝난 이후 [Root.GetName]는 승리를 거두었고 발칸에서 불가리아 헤게모니를 성공적으로 이룩하며 갑작스러운 황금기에 들어선 자신을 보았습니다. 1927년 바실 라도슬라포프(Vasil Radoslavov)총리가 사망하자 알렉산다르 말리노프(Aleksandar Malinov)가 권력을 잡게 되었습니다. 반독파로 유명한 말리노프와 그의 동맹들은 불가리아를 장기말 이상으로 보지 않는 독일을 위협적인 존재로 보았기에 그들의 황금기의 오만함에 빠진 와중에 독일로부터 멀어지고자 했고 두 옛 동맹의 관계는 냉각되었습니다. 이제 [Root.GetName]는 자신이 지역 내의 우월한 군사력에도 불구하고 발칸에 동맹이 거의 없고 [Root.GetName]의 위치를 약화시키는 병든 경제의 위험한 상태의 자신을 보았습니다. 그동안 옛 적들의 포위망은 독수리와 같이 간절하고도 탐욕스럽게 그들의 옛 영토를 재주장할 기회를 노리고 있습니다..."
+bulgaria.1.d:0 "세계 대전이 끝난 이후 [Root.GetName]는 승리를 거두었고 발칸에서 불가리아 헤게모니를 성공적으로 이룩하며 갑작스러운 황금기에 들어선 자신을 보았습니다.\n\n1927년 바실 라도슬라포프(Vasil Radoslavov)총리가 사망하자 알렉산다르 말리노프(Aleksandar Malinov)가 권력을 잡게 되었습니다. 반독파로 유명한 말리노프와 그의 동맹들은 불가리아를 장기말 이상으로 보지 않는 독일을 위협적인 존재로 보았기에 그들의 황금기의 오만함에 빠진 와중에 독일로부터 멀어지고자 했고 두 옛 동맹의 관계는 냉각되었습니다.\n\n이제 [Root.GetName]는 자신이 지역 내의 우월한 군사력에도 불구하고 발칸에 동맹이 거의 없고 [Root.GetName]의 위치를 약화시키는 병든 경제의 위험한 상태의 자신을 보았습니다. 그동안 옛 적들의 포위망은 독수리와 같이 간절하고도 탐욕스럽게 그들의 옛 영토를 재주장할 기회를 노리고 있습니다..."
 bulgaria.1.a:0 "[Root.GetName]와 차르에게 영광을!"
 bulgaria.1.b:0 "Why can't I see the foreign policy tree?"
 
