--- a/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
@@ -1114,9 +1114,9 @@ bra.136.b:0 "그들은 도망갈 수 없다!"
 bra.137.t:0 "[From.GetNameDefCap]의 거절"
 bra.137.d:0 "[From.GetAdjective] 정부는 아직 [CAF.GetNameDef]를 해방시킬수 있다고 결정한 것으로 보이며, 평화 제의를 거부했습니다."
 bra.137.a:0 "그들은 쓰라린 최후를 맞이할 것이다."
-bra.138.t:0 "The Taça Brasil"
-bra.138.d:0 "While football is by far and away the most popular sport in the country, it's safe to say that there is little on the way of a proper Brazilian football tournament. Each state league and football federation operates as an island of its own, and worse still, this damages our national team! In order to improve unity, and to give a definitive answer to the question of who is truly the best in Brazil, we will organize a national cup sponsored by His Majesty himself!"
-bra.138.a:0 "A commendable initiative!"
+bra.138.t:0 "브라질 컵"
+bra.138.d:0 "축구는 단연코 우리 국가에서 가장 인기 있는 스포츠이지만, 적절한 브라질 축구 시합이 거의 없다고 해도 과언이 아닙니다. 각 주의 리그와 축구 연맹은 그들만의 섬으로 운영되고 있고, 더 나쁜 것은, 우리 국가 대표팀에게 피해를 주는 것입니다! 단결을 개선하고, 누가 브라질에서 정말 최고인가 라는 질문에 대한 결정적인 대답을 하기 위해, 우리는 황제 폐하께서 후원하는 국가 컵을 조직할 것입니다!"
+bra.138.a:0 "훌륭한 계획이야!"
 bra.139.t:0 "The King of Patagonia Arrives in Rio"
 bra.139.d:0 "Antonie, King of Patagonia, arrived in Rio today, fresh from France, on request of our government. We seek his aid on important matters regarding the Mapuche, and their status on the republics to the south."
 bra.139.a:0 "In time, he will see how wise he was"
